# cafe-net-manager

./: .gitignore  CMakeLists.txt  README.md  index.html  package.json
demo-app/: index.html  package.json
demo-app/src/: main.js
docs/: architecture-summary.md  current-features.md  project-handoff.md
include/core/: AppContext.h
include/database/: CustomerRepository.h  DatabaseManager.h  MenuRepository.h  OrderRepository.h  PaymentRepository.h  SeatRepository.h  SeatSessionRepository.h
include/graphics/: CounterItem.h  EnvironmentItem.h  FloorPlanItem.h  FloorPlanScene.h  FloorPlanView.h  LineItem.h  SeatItem.h  WallItem.h
include/models/: Customer.h  MenuCategory.h  MenuItem.h  Order.h  OrderItem.h  Payment.h  Seat.h  SeatSession.h
include/pages/: AdminPage.h  DashboardPage.h  FloorPlanPage.h  KitchenPage.h  PosOrderPage.h
include/services/: AuditService.h  InventoryService.h  MenuService.h  OrderService.h  SeatService.h  SeatSessionService.h
include/utils/: Command.h  DatabaseTransaction.h  Logger.h
include/widgets/: AdminPage.h  CartWidget.h  CheckoutDialog.h  CustomerSearchWidget.h  DashboardWidget.h  FloorPlanPage.h  FloorPlanView.h  InspectorPanel.h  KitchenBoardWidget.h  MainWindow.h  MenuBrowserWidget.h  MenuItemCard.h  MenuManagementWidget.h  ModifierDialog.h  OrderCardWidget.h  PosCartPanel.h  PosMenuPanel.h  SeatDetailPanel.h  SeatGraphicsItem.h  SeatInfoDialog.h  SeatManagementWidget.h  SeatMapView.h  SeatOperationPanel.h  SidebarWidget.h  ToolPalette.h
include/widgets/admin/: CustomerAdminWidget.h  MenuAdminWidget.h  SeatAdminWidget.h
src/: main.cpp  main.js
src/core/: AppContext.cpp
src/database/: CustomerRepository.cpp  DatabaseManager.cpp  MenuRepository.cpp  OrderRepository.cpp  PaymentRepository.cpp  SeatRepository.cpp  SeatSessionRepository.cpp
src/graphics/: CounterItem.cpp  EnvironmentItem.cpp  FloorPlanItem.cpp  FloorPlanScene.cpp  LineItem.cpp  SeatItem.cpp  WallItem.cpp
src/models/: Customer.cpp  MenuCategory.cpp  MenuItem.cpp  OrderItem.cpp  Payment.cpp  Seat.cpp  SeatSession.cpp
src/pages/: AdminPage.cpp  DashboardPage.cpp  FloorPlanPage.cpp  KitchenPage.cpp  PosOrderPage.cpp
src/services/: AuditService.cpp  InventoryService.cpp  MenuService.cpp  OrderService.cpp  SeatService.cpp  SeatSessionService.cpp
src/utils/: Command.cpp  Logger.cpp
src/widgets/: AdminPage.cpp  CartWidget.cpp  CheckoutDialog.cpp  CustomerSearchWidget.cpp  DashboardWidget.cpp  FloorPlanPage.cpp  FloorPlanView.cpp  InspectorPanel.cpp  KitchenBoardWidget.cpp  MainWindow.cpp  MenuBrowserWidget.cpp  MenuItemCard.cpp  MenuManagementWidget.cpp  ModifierDialog.cpp  OrderCardWidget.cpp  PosCartPanel.cpp  PosMenuPanel.cpp  SeatDetailPanel.cpp  SeatGraphicsItem.cpp  SeatInfoDialog.cpp  SeatManagementWidget.cpp  SeatMapView.cpp  SeatOperationPanel.cpp  SidebarWidget.cpp  ToolPalette.cpp
src/widgets/admin/: CustomerAdminWidget.cpp  MenuAdminWidget.cpp  SeatAdminWidget.cpp
